Fix vertical-align on icons

--- a/css/goldPerHour.css
+++ b/css/goldPerHour.css
@@ -119,7 +119,7 @@ label {
     width: 15px;
     background-repeat: no-repeat;
     display: inline-block;
-    vertical-align: text-top;
+    vertical-align: middle;
     margin-top: 1px;
 }
 
